# prodcapacity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  README.md  capacity_cli.py  config.json  create_repo_secure.py  credentials.json  push_to_github.sh  pyproject.toml  requirements.txt  sample_matrix_criteria.json  setup_github.sh  setup_instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
google_sheets_integration/: cursor_integration.py
google_sheets_integration/apps_script/: capacity_model.gs  diagnostic.gs
tests/: __init__.py  test_integration.py
