[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capacity-model-integration"
version = "1.0.0"
description = "Google Sheets integration for Capacity Model with Cursor"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Production Capacity Tracker", email = "admin@productioncapacity.com"}
]
keywords = ["google-sheets", "capacity-model", "cursor", "automation", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "google-auth>=2.23.4",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.108.0",
    "pandas>=2.1.3",
    "requests>=2.31.0",
    "numpy>=1.24.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
capacity-cli = "capacity_cli:main"

[project.urls]
Homepage = "https://github.com/mrtellington/capacity-model-integration"
Repository = "https://github.com/mrtellington/capacity-model-integration"
Documentation = "https://github.com/mrtellington/capacity-model-integration#readme"
Issues = "https://github.com/mrtellington/capacity-model-integration/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["google_sheets_integration*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=google_sheets_integration",
    "--cov-report=term-missing",
    "--cov-report=html",
] 